<resources>
    <string name="app_name">Zia Chat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send_message">Send message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="sampletext">SampleText</string>

    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="chat_page_with_recycler_view">Chat page with Recycler view</string>
    <string name="image_picker">Image picker</string>

    <string name="iphone">Iphone</string>
    <string name="chair">Chair</string>
    <string name="setup">Setup</string>
    <string name="lighting">Lighting</string>
    <string name="art">Art</string>
    <string name="laptop">Laptop</string>
    <string name="select_your_category">Select your Category</string>
    <string name="submit">Submit</string>
    <string name="send_image">Send image</string>
    <string name="next_image">Next image</string>
</resources>
