<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/empty_rounded_corner">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/select_your_category"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.learning.ziachat.customviews.CustomImagePicker
        android:id="@+id/category1"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin_half"
        app:image="@drawable/iphone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/category2"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:text="@string/iphone" />

    <com.learning.ziachat.customviews.CustomImagePicker
        android:id="@+id/category2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin_half"
        app:image="@drawable/laptop"
        app:layout_constraintLeft_toRightOf="@id/category1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        app:text="@string/laptop" />

    <com.learning.ziachat.customviews.CustomImagePicker
        android:id="@+id/category3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:image="@drawable/chair"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/category4"
        app:layout_constraintTop_toBottomOf="@id/category1"
        app:text="@string/chair" />

    <com.learning.ziachat.customviews.CustomImagePicker
        android:id="@+id/category4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:image="@drawable/setup"
        app:layout_constraintLeft_toRightOf="@id/category3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category2"
        app:text="@string/setup" />

    <com.learning.ziachat.customviews.CustomImagePicker
        android:id="@+id/category5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:image="@drawable/light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/category4"
        app:layout_constraintTop_toBottomOf="@id/category3"
        app:text="@string/lighting" />

    <com.learning.ziachat.customviews.CustomImagePicker
        android:id="@+id/category6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:image="@drawable/art"
        app:layout_constraintLeft_toRightOf="@id/category5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category4"
        app:text="@string/art" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/accept_button"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category6" />

</androidx.constraintlayout.widget.ConstraintLayout>