<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/fab_margin"
    android:layout_marginTop="@dimen/fab_margin"
    android:layout_marginEnd="@dimen/fab_margin"
    android:background="@drawable/response_msg_background">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/sampletext"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize24"
        app:layout_constraintBottom_toTopOf="@id/scrollLayout"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@id/buttonLayout"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading">


    </HorizontalScrollView>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollLayout"
        app:layout_constraintVertical_bias="1">

        <Button
            android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_toStartOf="@id/accept"
            android:background="@drawable/reject_button"
            android:fontFamily="@font/roboto_slab"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/reject"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/fab_margin"
            android:background="@drawable/accept_button"
            android:fontFamily="@font/roboto_slab"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/accept"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>